--- a/amplify.yml
+++ b/amplify.yml
@@ -3,15 +3,14 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm ci --cache .npm --prefer-offline --omit=dev --omit=optional
+        - npm ci --cache .npm --prefer-offline --omit=dev
     build:
       commands:
         - npm run build
-        - mv node_modules ./.amplify-hosting/compute/default
   artifacts:
     baseDirectory: .amplify-hosting
     files:
       - '**/*'
   cache:
     paths:
-      - .npm/**/*
+      - node_modules/**/*
